crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__code_block_tests__snapshots__code_block_long.snap
---
source: crates/crucible-cli/src/tui/testing/code_block_tests.rs
expression: h.render()
---
       field_3: i32,                                                            
       field_4: i32,                                                            
       field_5: i32,                                                            
       field_6: i32,                                                            
       field_7: i32,                                                            
       field_8: i32,                                                            
       field_9: i32,                                                            
       field_10: i32,                                                           
       field_11: i32,                                                           
       field_12: i32,                                                           
       field_13: i32,                                                           
       field_14: i32,                                                           
       field_15: i32,                                                           
       field_16: i32,                                                           
       field_17: i32,                                                           
       field_18: i32,                                                           
       field_19: i32,                                                           
       field_20: i32,                                                           
   }                                                                            
                                                                                
                                                                                
 >                                                                              
                                                                                
▸ Plan │ ollama/llama3.2 │ Ready
