crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__code_block_tests__snapshots__code_block_multiline.snap
---
source: crates/crucible-cli/src/tui/testing/code_block_tests.rs
expression: h.render()
---
                                                                                
 > Show me some code                                                            
                                                                                
 ● Here's an example:                                                           
   fn main() {                                                                  
       println!("Hello");                                                       
   }                                                                            
   This prints Hello.                                                           
                                                                                
                                                                                
 >                                                                              
                                                                                
▸ Plan │ ollama/llama3.2 │ Ready
