crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__code_block_tests__snapshots__code_block_rust.snap
---
source: crates/crucible-cli/src/tui/testing/code_block_tests.rs
expression: h.render()
---
                                                                                
 > Show me Rust                                                                 
                                                                                
 ● Here's an example:                                                           
                                                                                
   rust                                                                         
   fn main() {                                                                  
       println!("Hello!");                                                      
   }                                                                            
                                                                                
                                                                                
                                                                                
 >                                                                              
                                                                                
▸ Plan │ ollama/llama3.2 │ Ready
