crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__code_block_tests__snapshots__code_block_untagged.snap
---
source: crates/crucible-cli/src/tui/testing/code_block_tests.rs
expression: h.render()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 > Show output                                                                  
                                                                                
 ● Here's the output:                                                           
   Some plain output                                                            
   line 2                                                                       
   line 3                                                                       
                                                                                
                                                                                
 >                                                                              
                                                                                
▸ Plan │ Ready
