crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__code_block_tests__snapshots__code_blocks_multi_lang.snap
---
source: crates/crucible-cli/src/tui/testing/code_block_tests.rs
expression: h.render()
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 > Compare languages                                                            
                                                                                
 ● Python:                                                                      
   print("Hello")                                                               
   Rust:                                                                        
   println!("Hello");                                                           
                                                                                
                                                                                
 >                                                                              
                                                                                
▸ Plan │ ollama/llama3.2 │ Ready
