crates/crucible-cli/src/tui/testing/snapshots/crucible_cli__tui__testing__code_block_tests__snapshots__code_inline.snap
---
source: crates/crucible-cli/src/tui/testing/code_block_tests.rs
expression: render_conversation(&state)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
 > What is println?                                                             
                                                                                
 ● The println! macro prints to stdout. Use it like println!("Hello")
